add button ooke

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h2>4 macam buah</h2>
     <h3>Lorem ipsum dolor sit.</h3>
     <p>ini belajar gw pertama </p>
-    <button>belajar yuk</button> 
+    <button>belajar yuk</button>
+    <button>ooke guys</button>
     <ol> 
         <li>Mangga</li>
         <li>Durian</li>
